roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/05-resources/5.1-insufficient-resources/broken/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lab-5-1-route
  labels:
    app: lab-5-1-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  to:
    kind: Service
    name: lab-5-1-svc
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
